--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,10 +33,10 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-danger sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -52,7 +52,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('index.indexIndex') }}">
+                <a class="nav-link" href="#">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Inicio</span></a>
             </li>
@@ -74,20 +74,13 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">1- Ciudad</a>
+                        <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
                         <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">2- Pais</a>
-                        <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">3- Nacionalidad</a>
-                        <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">4- Ocupación</a> 
-                        <a class="collapse-item" href="{{ url_for('estadocivil.estadocivilIndex') }}">5- Estado Civil</a>
-                        <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">6- Sexo</a>
-                        <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">7- Persona</a>
-                        <a class="collapse-item" href="#">8-</a> 
-                        <a class="collapse-item" href="#">9-</a> 
-                        <a class="collapse-item" href="#">10-</a> 
-
-                        <a class="collapse-item" href="{{ url_for('correo.correoIndex') }}">Correo</a> 
-                        <a class="collapse-item" href="{{ url_for('telefono.telefonoIndex') }}">Teléfono</a>
-                        <a class="collapse-item" href="{{ url_for('direccion.direccionIndex') }}">Dirección</a>
+                        <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+                        <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a> 
+                        <a class="collapse-item" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
+                        <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
+                    
 
 
                     </div>
@@ -348,7 +341,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; manurxk</span>
+                        <span>Copyright &copy; Evercito</span>
                     </div>
                 </div>
             </footer>
