--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,15 +74,16 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
-                        <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">2- Pais</a>
-                        <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
                         <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a> 
                         <a class="collapse-item" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
                         <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
-                    
-
-
+                        <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>   
+                        <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a> 
+                        <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
+                        <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
+                        <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamiento</a>
+                        <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estadocita</a>
                     </div>
                 </div>
             </li>
